<resources>
    <string name="app_name">JetBeepExample</string>
    <string name="load_merchant">Load merchants</string>
    <string name="load_shop">Load shops</string>
    <string name="load_offers">Load offers</string>
    <string name="load_vending">Vending</string>
    <string name="update">update</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">connect</string>
    <string name="check_permissions">Check permissions</string>
    <string name="request_permissions">Request permissions</string>
    <string name="permissions">Permissions</string>
    <string name="load_notifications">Load notif</string>
</resources>
